# masters_thesis

./: .gitignore  README.md  build.bat  deb.txt  todo.md
python_package/: example.py
python_package/holocam/: MANIFEST.in  pyproject.toml  setup.py
src/: common.h  example.c  holo.h  holo_cam.h  win32_main.c
src/holo_cam/: README.md  activate.h  attributes.h  callback.h  dllmain.c  frame_generator.h  holo_cam.def  media_source.h  media_stream.h  media_type_handler.h  presentation_descriptor.h  stream_descriptor.h
src/holo_cam_python/: module.c  setup.py  test.py
src/holo_cam_python/holocam/: module.c  pyproject.toml  setup.py
src/holo_cam_python/holocam/holocam/: __init__.py  holocam_thread.py
