[build-system]
requires = ["setuptools", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "holocam"
authors = [
	{ name = "Simon Doksrød", email = "simondok@stud.ntnu.no" },
]
description = "Python wrapper for the Holo virtual camera for windows 11"
requires-python = ">=3.8"
version = "1.1.0"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
		"numpy",
]

[tool.setuptools.packages.find]
include = ["*"]  # ["*"] by default
namespaces = false
